# NanoScale

./: .gitignore  AGENTS.md  Cargo.toml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/dashboard/: .env  eslint.config.mjs  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/login/: login-form.tsx  page.tsx
apps/dashboard/app/projects/: page.tsx
apps/dashboard/app/servers/: page.tsx  servers-page-client.tsx
apps/dashboard/app/setup/: actions.ts  page.tsx  setup-form.tsx
apps/dashboard/components/: auth-guard.tsx  theme-provider.tsx  toast.tsx
apps/dashboard/lib/: api-base-url.ts  auth-api.ts  github-api.ts  projects-api.ts  server-stats-api.ts  server-stats-client.ts  servers-api.ts
crates/agent/: Cargo.toml
crates/agent/migrations/: 0001_initial_schema.sql  0002_auth.sql  0003_project_output_directory.sql  0004_github_integration.sql
crates/agent/src/: config.rs  db.rs  lib.rs  main.rs  orchestrator.rs  request_logging.rs  worker.rs
crates/agent/src/cluster/: mod.rs  protocol.rs  signature.rs  token_store.rs
crates/agent/src/db/: github.rs  projects.rs  servers.rs  tests.rs  types.rs  users.rs
crates/agent/src/deployment/: build.rs  git.rs  inactivity_monitor.rs  mod.rs  nginx.rs  systemd.rs  teardown.rs  tls.rs
crates/agent/src/orchestrator/: api_types.rs  auth.rs  cluster.rs  github.rs  internal.rs  project_domain.rs  project_mapping.rs  projects.rs  servers.rs  stats_cache.rs  tests.rs  worker_client.rs
crates/agent/src/system/: mod.rs  privilege_wrapper.rs  stats.rs
crates/agent/src/system/privilege_wrapper/: certbot.rs  validators.rs
crates/agent/src/worker/: api_types.rs  handlers.rs  tests.rs
docs/: code-style-guide.md  dashboard-ui-improvements.md  development-roadmap.md  github-integration-plan.md  installation-and-run-guide.md  technical-specification.md  ui-specification.md
scripts/: install.sh
scripts/security/sudoers.d/: nanoscale
(+22 files in other folders)
