[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
http = "1"
jsonwebtoken = "9"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", default-features = false, features = ["sqlite"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
